<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.com.termproject.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:text="@string/textview"
        android:textSize="40sp"
        android:textColor="#68c5e7"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton01"
            android:layout_marginTop="22dp"
            android:src="@drawable/travel"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:onClick="onClick01"
            android:contentDescription="@string/imageview01" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton02"
            android:src="@drawable/st"
            android:layout_alignTop="@+id/imageButton01"
            android:layout_alignParentEnd="true"
            android:onClick="onClick02"
            android:contentDescription="@string/imageview02" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton03"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="78dp"
            android:src="@drawable/map"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/imageButton01"
            android:onClick="onClick03"
            android:contentDescription="@string/imageview03" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton04"
            android:src="@drawable/pen"
            android:layout_alignTop="@+id/imageButton03"
            android:layout_alignStart="@+id/imageButton02"
            android:focusableInTouchMode="true"
            android:onClick="onClick04"
            android:contentDescription="@string/imageview04" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview02"
            android:layout_marginLeft="5dp"
            android:id="@+id/textView3"
            android:layout_below="@+id/imageButton01"
            android:layout_alignParentStart="true"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview03"
            android:id="@+id/textView4"
            android:layout_below="@+id/imageButton02"
            android:layout_alignStart="@+id/imageButton02"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview04"
            android:layout_marginLeft="5dp"
            android:id="@+id/textView5"
            android:layout_below="@+id/imageButton04"
            android:layout_alignParentStart="true"
            android:longClickable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview05"
            android:id="@+id/textView6"
            android:layout_alignStart="@+id/imageButton04"
            android:layout_alignBottom="@+id/textView5" />

    </RelativeLayout>

</RelativeLayout>
